# mixpeek-python-old

./: .gitignore  LICENSE.rst  MANIFEST.in  PKG-INFO  README.md  examples.py  pyproject.toml  setup.py
.github/workflows/: publish-package.yml
mixpeek/: __init__.py
mixpeek.egg-info/: PKG-INFO  SOURCES.txt
scripts/: test.py
