[tool.poetry]
name = "mixpeek-python"
version = "0.1.0"
description = ""
authors = ["Ethan Steininger <esteininger21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
requests = "^2.31.0"
setuptools = "^69.2.0"
wheel = "^0.43.0"
twine = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
